--- a/Smartspend/app/src/main/res/layout/activity_new_income.xml
+++ b/Smartspend/app/src/main/res/layout/activity_new_income.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#333333"
+    android:background="#1b1b1b"
     tools:context=".NewIncome">
 
     <TextView
@@ -15,19 +15,19 @@
         android:layout_marginTop="108dp"
         android:text="New Income"
         android:textColor="#FFFFFF"
-        android:textSize="24sp"
+        android:textSize="45dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_margin="32dp"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <EditText
         android:id="@+id/et_amount"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_width="390dp"
+        android:layout_height="66dp"
+        android:layout_marginTop="36dp"
         android:background="@drawable/custom_edittext_green_border"
         android:gravity="center"
         android:hint="Amount"
@@ -36,15 +36,15 @@
         android:textColor="#FFFFFF"
         android:textColorHint="#90EE90"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintHorizontal_bias="0.476"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_reference"
         app:layout_constraintWidth_percent="0.85" />
 
     <EditText
         android:id="@+id/et_reference"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="389dp"
+        android:layout_height="74dp"
         android:layout_marginTop="64dp"
         android:background="@drawable/custom_edittext_green_border"
         android:gravity="center"
@@ -64,11 +64,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:backgroundTint="#004D40"
+        android:backgroundTint="#31453a"
         android:gravity="center"
         android:padding="14dp"
         android:text="Confirm"
         android:textColor="#FFFFFF"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
