--- a/Smartspend/app/src/main/res/layout/activity_new_income.xml
+++ b/Smartspend/app/src/main/res/layout/activity_new_income.xml
@@ -34,7 +34,7 @@
         android:inputType="numberDecimal"
         android:padding="12dp"
         android:textColor="#FFFFFF"
-        android:textColorHint="#90EE90"
+        android:textColorHint="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,7 +52,7 @@
         android:inputType="text"
         android:padding="12dp"
         android:textColor="#FFFFFF"
-        android:textColorHint="#90EE90"
+        android:textColorHint="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
