--- a/Smartspend/app/src/main/res/layout/activity_login.xml
+++ b/Smartspend/app/src/main/res/layout/activity_login.xml
@@ -114,6 +114,7 @@
             android:id="@+id/etEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/custom_edittext_green_border"
             android:drawableTint="#7E7E7E"
             android:hint="E-mail"
             android:inputType="textEmailAddress"
@@ -136,6 +137,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:foreground="#00000000"
+            android:background="@drawable/custom_edittext_green_border"
             android:hint="Password"
             android:inputType="textPassword"
             android:textColor="#FFFFFF"
