--- a/Smartspend/app/src/main/res/layout/activity_main.xml
+++ b/Smartspend/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#272727"
-    android:padding="16dp">
+    android:background="#272727">
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="148dp"
         android:layout_height="106dp"
-        android:layout_gravity="center_horizontal"
-        app:srcCompat="@drawable/smartspend_logo" />
+        android:layout_marginTop="16dp"
+        app:srcCompat="@drawable/smartspend_logo"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/welcomeText"
@@ -22,7 +24,10 @@
         android:text="Welcome, John"
         android:textColor="#FFFFFF"
         android:textSize="32sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/imageView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/availableBudgetText"
@@ -30,7 +35,10 @@
         android:layout_height="wrap_content"
         android:text="Available Budget"
         android:textColor="#AAAAAA"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        app:layout_constraintTop_toBottomOf="@id/welcomeText"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/budgetAmount"
@@ -40,15 +48,20 @@
         android:text="R6,543.50"
         android:textColor="#70FFB5"
         android:textSize="36sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/availableBudgetText"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <RelativeLayout
+        android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:background="@drawable/gradient_expenses"
-        android:padding="16dp">
-
-    </RelativeLayout>
+        android:padding="16dp"
+        app:layout_constraintTop_toBottomOf="@id/budgetAmount"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <GridLayout
         android:layout_width="match_parent"
@@ -56,7 +69,10 @@
         android:alignmentMode="alignMargins"
         android:columnCount="2"
         android:padding="16dp"
-        android:rowCount="2">
+        android:rowCount="2"
+        app:layout_constraintTop_toBottomOf="@id/relativeLayout"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <androidx.appcompat.widget.AppCompatButton
             android:layout_width="73dp"
@@ -107,6 +123,14 @@
             android:textSize="16sp" />
     </GridLayout>
 
+    <!-- Navbar at the bottom -->
+    <include
+        android:id="@+id/bottom_nav"
+        layout="@layout/activity_base"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
