some tweaks, navbar

--- a/Smartspend/app/src/main/res/layout/activity_saving_goals.xml
+++ b/Smartspend/app/src/main/res/layout/activity_saving_goals.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_weight="1"
     android:id="@+id/main"
     android:background="#1b1b1b">
 
@@ -43,8 +44,19 @@
     android:backgroundTint="#3f6e56"
     android:elevation="8dp"
 
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintBottom_toTopOf="@id/bottom_nav"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+
+    <!-- Navbar at the bottom -->
+    <include
+        android:id="@+id/bottom_nav"
+        layout="@layout/activity_base"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 
 
