--- a/Smartspend/app/src/main/res/layout/activity_base.xml
+++ b/Smartspend/app/src/main/res/layout/activity_base.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -18,10 +17,13 @@
         android:padding="8dp">
 
         <FrameLayout
+            android:id="@+id/home_nav_container"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:background="@drawable/circle_background"
-            android:gravity="center">
+            android:gravity="center"
+            android:clickable="true"
+            android:focusable="true">
 
             <ImageView
                 android:id="@+id/home_nav"
@@ -37,7 +39,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Home"
-            android:textColor="#70FFB5"
+            android:textColor="#FFFFFF"
             android:textSize="10sp"
             android:gravity="center" />
     </LinearLayout>
@@ -51,10 +53,13 @@
         android:padding="8dp">
 
         <FrameLayout
+            android:id="@+id/notifications_nav_container"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:background="@drawable/circle_background"
-            android:gravity="center">
+            android:gravity="center"
+            android:clickable="true"
+            android:focusable="true">
 
             <ImageView
                 android:id="@+id/notifications_nav"
@@ -84,10 +89,13 @@
         android:padding="8dp">
 
         <FrameLayout
+            android:id="@+id/add_record_nav_container"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:background="@drawable/circle_background"
-            android:gravity="center">
+            android:gravity="center"
+            android:clickable="true"
+            android:focusable="true">
 
             <ImageView
                 android:id="@+id/add_record_nav"
@@ -117,10 +125,13 @@
         android:padding="8dp">
 
         <FrameLayout
+            android:id="@+id/history_nav_container"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:background="@drawable/circle_background"
-            android:gravity="center">
+            android:gravity="center"
+            android:clickable="true"
+            android:focusable="true">
 
             <ImageView
                 android:id="@+id/history_nav"
@@ -150,10 +161,13 @@
         android:padding="8dp">
 
         <FrameLayout
+            android:id="@+id/settings_nav_container"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:background="@drawable/circle_background"
-            android:gravity="center">
+            android:gravity="center"
+            android:clickable="true"
+            android:focusable="true">
 
             <ImageView
                 android:id="@+id/settings_nav"
