--- a/Smartspend/app/src/main/res/layout/activity_new_expenses.xml
+++ b/Smartspend/app/src/main/res/layout/activity_new_expenses.xml
@@ -83,14 +83,16 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="64dp"
         android:layout_marginTop="72dp"
-        android:background="@drawable/custom_edittext_green_border"
         android:padding="16dp"
         android:text="Confirm"
         android:textColor="#FFFFFF"
+        android:backgroundTint="#31453a"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_margin="32dp"
-        app:layout_constraintTop_toBottomOf="@id/amount" />
+        app:layout_constraintTop_toBottomOf="@id/amount"
+        app:strokeColor="#70FFB5"
+        app:strokeWidth="1dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
