--- a/Smartspend/app/src/main/res/layout/activity_new_goal.xml
+++ b/Smartspend/app/src/main/res/layout/activity_new_goal.xml
@@ -65,8 +65,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="64dp"
         android:layout_marginTop="44dp"
-        android:background="@drawable/custom_edittext_green_border"
-        android:backgroundTint="#00FF00"
+        android:backgroundTint="#31453a"
         android:padding="16dp"
         android:text="Save"
         android:textColor="#FFFFFF"
@@ -74,6 +73,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_margin="32dp"
-        app:layout_constraintTop_toBottomOf="@id/totalAmount" />
+        app:layout_constraintTop_toBottomOf="@id/totalAmount"
+        app:strokeColor="#70FFB5"
+        app:strokeWidth="1dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
