DetailedView page created

--- a/Smartspend/app/src/main/res/drawable/card_border.xml
+++ b/Smartspend/app/src/main/res/drawable/card_border.xml
@@ -9,12 +9,12 @@
         </shape>
     </item>
 
-    <!-- Border -->
+
     <item>
         <shape android:shape="rectangle">
             <stroke
                 android:width="3dp"
-                android:color="#70FFB5" /> <!-- Border color -->
+                android:color="#70FFB5" />
             <corners android:radius="24dp" />
         </shape>
     </item>
