--- a/Smartspend/app/src/main/res/layout/card_category.xml
+++ b/Smartspend/app/src/main/res/layout/card_category.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
-    android:background="@drawable/card_border"
+    android:background="@drawable/category_border"
     card_view:cardCornerRadius="8dp"
     card_view:cardElevation="0dp">
 
