--- a/Smartspend/app/src/main/res/layout/card_category.xml
+++ b/Smartspend/app/src/main/res/layout/card_category.xml
@@ -1,18 +1,17 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
-    android:background="@drawable/category_border"
     card_view:cardCornerRadius="8dp"
+    android:id="@+id/cardView"
     card_view:cardElevation="0dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#434343"
         android:orientation="horizontal"
+        android:background="#434343"
         android:padding="16dp">
 
         <!-- Category Name -->
