--- a/Smartspend/app/src/main/res/layout/activity_main.xml
+++ b/Smartspend/app/src/main/res/layout/activity_main.xml
@@ -2,10 +2,12 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#272727">
 
+    <!-- Logo Image -->
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="148dp"
@@ -16,6 +18,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <!-- Welcome Text -->
     <TextView
         android:id="@+id/welcomeText"
         android:layout_width="wrap_content"
@@ -29,6 +32,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <!-- Available Budget Text -->
     <TextView
         android:id="@+id/availableBudgetText"
         android:layout_width="wrap_content"
@@ -40,6 +44,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <!-- Budget Amount Text -->
     <TextView
         android:id="@+id/budgetAmount"
         android:layout_width="wrap_content"
@@ -53,6 +58,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <!-- Expenses Section -->
     <RelativeLayout
         android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
@@ -63,7 +69,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <!-- Grid Layout for Navigation Buttons -->
     <GridLayout
+        android:id="@+id/navigationGrid"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:alignmentMode="alignMargins"
@@ -72,11 +80,13 @@
         android:rowCount="2"
         app:layout_constraintTop_toBottomOf="@id/relativeLayout"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/bottom_nav">
 
+        <!-- Button for Detailed View -->
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/buttonDetailedView"
-            android:layout_width="73dp"
+            android:layout_width="0dp"
             android:layout_height="73dp"
             android:layout_columnWeight="1"
             android:layout_margin="8dp"
@@ -87,9 +97,10 @@
             android:textColor="#FFFFFF"
             android:textSize="16sp" />
 
+        <!-- Button for Saving Goals -->
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/buttonSavingGoals"
-            android:layout_width="73dp"
+            android:layout_width="0dp"
             android:layout_height="73dp"
             android:layout_columnWeight="1"
             android:layout_margin="8dp"
@@ -100,9 +111,10 @@
             android:textColor="#FFFFFF"
             android:textSize="16sp" />
 
+        <!-- Button for Reminders -->
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/buttonReminders"
-            android:layout_width="73dp"
+            android:layout_width="0dp"
             android:layout_height="73dp"
             android:layout_columnWeight="1"
             android:layout_margin="8dp"
@@ -113,9 +125,10 @@
             android:textColor="#FFFFFF"
             android:textSize="16sp" />
 
+        <!-- Button for Settings -->
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/buttonSettings"
-            android:layout_width="73dp"
+            android:layout_width="0dp"
             android:layout_height="73dp"
             android:layout_columnWeight="1"
             android:layout_margin="8dp"
@@ -137,6 +150,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-
 </androidx.constraintlayout.widget.ConstraintLayout>
-
