--- a/Smartspend/app/src/main/res/layout/activity_notifications.xml
+++ b/Smartspend/app/src/main/res/layout/activity_notifications.xml
@@ -1,31 +1,36 @@
-<RelativeLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#2E2E2E">
 
+    <!-- Title Text -->
     <TextView
         android:id="@+id/notificationsTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:layout_margin="16dp"
-        android:layout_marginTop="19dp"
-        android:layout_marginBottom="16dp"
         android:text="Notifications"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
+    <!-- RecyclerView for Notifications -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/notificationsRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/notificationsTitle"
+        android:layout_height="0dp"
         android:paddingTop="8dp"
         android:paddingBottom="60dp"
-        android:clipToPadding="false" />
+        android:clipToPadding="false"
+        app:layout_constraintTop_toBottomOf="@id/notificationsTitle"
+        app:layout_constraintBottom_toTopOf="@id/bottom_nav" />
 
+    <!-- No Notifications Message -->
     <TextView
         android:id="@+id/noNotificationsMessage"
         android:layout_width="wrap_content"
@@ -33,6 +38,20 @@
         android:text="No notification yet"
         android:textColor="#AAAAAA"
         android:textSize="18sp"
-        android:layout_centerInParent="true"
-        android:visibility="gone" />
-</RelativeLayout>
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/notificationsRecyclerView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- Bottom Navigation Bar -->
+    <include
+        android:id="@+id/bottom_nav"
+        layout="@layout/activity_base"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
